--- a/index.html
+++ b/index.html
@@ -43,10 +43,29 @@
 
 <body>
 
+    <nav>
+
+
+            <div class="home_box">
+                <a class="home">SOUFI Chamalaine</a>
+            </div>
+
+
+            <div id="links">
+                <a class="link">Compétences</a>
+                <a class="link">Formations</a>
+                <a class="link">Expériences</a>
+                <a class="link">A propos de Moi</a>
+            </div>
+
+    </nav>
+
     <div id="particles-js" class="background">
 
         <div id="wrapper">
-            <div id="test" data-aos="fade-in"></div>
+
+            
+            
         </div>
 
     </div>
