--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="description" content="Développeur Web Symfony à Strasbourg.">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N5BYS2V6MP"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-N5BYS2V6MP');
+    </script>
+ 
+
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+
+
+
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -101,7 +118,7 @@
                     <div class="container">
                         <div class="row align-items-center justify-content-center mt-5 mb-5">
                         <div class="col-sm">
-                            <img src="img/profile.jpg" class="rounded-circle img-fluid  hover-shadow" id="profile" data-aos="zoom-in" data-aos-duration="3000">
+                            <img src="img/profile.jpg" class="rounded-circle img-fluid  hover-shadow" id="profile" data-aos="zoom-in" data-aos-duration="3000" alt="photo de profile">
                         </div>
 
                         <div class="col-sm d-flex flex-column align-items-center justify-content-start"> 
@@ -293,8 +310,9 @@
     <script src="script/particles.min.js"></script>
 
 
-
     <footer class="fixed-bottom container-fluid d-flex justify-content-evenly align-items-center p-1 ">
+
+
 
 
         <div class="mentions" >
@@ -322,6 +340,9 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
 
+        <!--Cookie consent-->
+        <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+
         <!--Script-->
         <script src="script/script.js"></script>
 
@@ -341,6 +362,9 @@
             AOS.init();
         </script>   
 
+
+
+    <noscript>Votre Hébergeur ne supporte pas javascript</noscript>
 
 
 
