--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <meta name="description" content="Développeur Web Symfony à Strasbourg.">
 
+    <link rel="icon" href="icon/favicon.ico" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N5BYS2V6MP"></script>
     <script>
@@ -311,8 +312,6 @@
 
 
     <footer class="fixed-bottom container-fluid d-flex justify-content-evenly align-items-center p-1 ">
-
-
 
 
         <div class="mentions" >
